--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rbtphp/yii2-ffmpeg",
+    "name": "elisevgeniy/yii2-ffmpeg",
     "description": "convert media from one format to other",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","ffmpeg"],
@@ -8,6 +8,10 @@
         {
             "name": "Raheem",
             "email": "rj@gmail.com"
+        },
+        {
+            "name": "elisevgeniy",
+            "email": "elisevgeniy@gmail.com"
         }
     ],
     "require": {
@@ -21,7 +25,7 @@
     "repositories":[
     {
         "type": "git",
-        "url": "https://github.com/AbdulRaheem123/test2.git"
+        "url": "https://github.com/elisevgeniy/test2.git"
     }
 ]
 }
